src/styles/tmx.css
/* ... */
.font-medium {
  font-size: 15px;
}

#tournaments .tabulator-row table tr td:first-of-type {
  width: 60px;
}

.main {
  width: 100%;
  min-height: 50vh;
}

/* prevent scrollbar on hover in Tabulator tables */
.tabulator-tableholder {
  -ms-overflow-style: none;  /* Internet Explorer 10+ */
  scrollbar-width: none;  /* Firefox */
}
.tabulator-tableholder::-webkit-scrollbar { 
  display: none;  /* Safari and Chrome */
}

/* minimum height prevents jumpy rendering */
.section {
  padding: 0em;
  /* padding-right: .7rem !important; */
  min-height: 1000px;
  /* margin-left: 1rem;*/
}

.tmxLogo {
  width: 120px;
}

.toggleCaret {
  font-size: larger;
  color: var(--tmx-accent-blue);
}


#unscheduledVisibility {
  margin-bottom: 2em;
}

.panel_container {
  width: 100%;
}

.mfcButton {
  transition: all .2s ease-in-out;
  background-color: inherit;
  border: none;
  color: inherit;
  padding: .3em;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 1em;
}

.panelHeader {
  background-color: var(--tmx-bg-panel-header);
  -webkit-align-items: center;
  -webkit-flex-direction: row;
  flex-direction: row;

  -webkit-justify-content: space-between;
  justify-content: space-between;
  align-content: center;
  align-items: center;

  display: flex;
  padding: 1em;
  height: 3em;
  width: 100%;

  flex-grow: 1;
}
.draw_buttons { padding: 1em; }
.buttonBar { padding: .5em; }
.tabHeader { padding: .5em; padding-bottom: 0em; }

.draw_buttons,
.buttonBar,
.options_left {
  display: flex;
  flex-direction: row;
  align-content: center;
  -webkit-flex-direction: row;
  -webkit-align-content: center;
}
.draw_options,
.buttonBar {
  flex-direction: row;
  width: 100%;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  align-content: center;
  -webkit-align-items: center;
  align-items: center;
}
.options_left {
  flex-flow: row wrap;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  align-content: center;
  -webkit-align-items: center;
  align-items: center;
}
.options_center,
.options_right {
  -webkit-align-content: center;
  align-content: center;
  display: flex;
}
.options_center {
  -webkit-flex-direction: row;
  flex-direction: row;
  -webkit-justify-content: center;
  justify-content: center;
  align-content: center;
  -webkit-align-items: center;
  align-items: center;
}
.options_right {
  flex-grow: 1;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  flex-direction: row;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  align-content: center;
  -webkit-align-items: center;
  align-items: center;
}
.tpl-layout .options_left {
  flex-grow: 1;
}
.tpl-layout .options_center {
  flex-grow: 0;
}
.tpl-layout .options_right {
  flex-grow: 2;
}
#eventControl .options_left {
  flex-grow: 1;
}
#eventControl .options_center {
  flex-grow: 0;
}
#eventControl .options_right {
  flex-grow: 1;
}
.options_overlay {
  flex-grow: 1;
  -webkit-flex-direction: row;
  flex-direction: row;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  align-content: center;
  -webkit-align-items: center;
  align-items: center;
  display: none;
}

/* from index styles */
.tournament_container {
  width: 100%;
  -webkit-flex-direction: column;
  flex-direction: column;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  align-content: center;
  -webkit-align-items: center;
  align-items: center;
  display: flex;
}

.flexrow,
.flexrow-wrap {
  -webkit-flex-direction: row;
  flex-direction: row;
  display: flex;
}
.flexrow {
  flex-direction: row;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}
.flexrow-wrap {
  width: 100%;
  flex-direction: row;
  flex-wrap: nowrap;
}
.flexnowrap {
  display: flex;
  -webkit-flex-direction: row;
  flex-direction: row;
  flex-wrap: nowrap;
}
.flexcol {
  display: flex;
  -webkit-flex-direction: column;
  flex-direction: column;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}
.flexaligncenter {
  display: flex;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  align-content: center;
  -webkit-align-items: center;
  align-items: center;
}
.flexcenter {
  display: flex;
  -webkit-justify-content: center;
  justify-content: center;
  align-content: center;
  -webkit-align-items: center;
  align-items: center;
}
.flexjustifystart {
  display: flex;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}
.flexjustifyend {
  display: flex;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
}
.location_detail_body {
  padding: 0.3em;
  text-align: left;
  width: 100%;
  display: flex;
  flex-direction: column;
  -webkit-flex-direction: column;
}

.ellipsis {
  overflow: hidden;
}
.ellipsis,
.truncate {
  text-overflow: ellipsis;
  white-space: nowrap;
}
.btn,
.ellipsis,
.nowrap,
.truncate {
  white-space: nowrap;
}
html {
  touch-action: manipulation;
}
* {
  box-sizing: border-box;
}
.noselect {
  cursor: default;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -o-user-select: none;
  user-select: none;
}
#content {
  width: auto;
  height: 100%;
  display: flex;
  flex-direction: column;
  -webkit-flex-direction: column;
  align-items: center;
  -webkit-align-items: center;
}
.header {
  margin-bottom: 0.5em;
}
.container {
  width: 100%;
  min-height: 15em;
  font-size: 1em;
}

/*
*/

body {
  margin: 0;
}

* {
  box-sizing: border-box;
}
/* ... */

